Check if process is running before stop [skip ci]